# lightspeedDB

./: .gitignore  ARCHITECTURE.md  BENCH_SPECS.md  CLAUDE.md  CURRENT_ARCH.md  Cargo.toml  LICENSE  Makefile  README.md  flake.nix  future_bench.rs  justfile  querys.md
.claude/projects/-home-wyattgill-Github-db/memory/: MEMORY.md  feedback_panics_over_snafu.md
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 3d2g9hymibxpv1jz1y3s1g09xyjp1lpx-source  v8wrd1nxqiszcp3aa1ng9sm4d7ahv6lb-source  xaknai40sz4yyy5658prwrwmfycj4xvm-source  yflx6rss6y61qqxv9kr8r7gp8gmy1pbr-source
crates/db-buffer/: Cargo.toml
crates/db-catalog/: Cargo.toml
crates/db-catalog/benches/: insert.rs
crates/db-catalog/src/: database.rs  lib.rs  table.rs
crates/db-cli/: Cargo.toml
crates/db-cli/src/: main.rs
crates/db-core/: Cargo.toml
crates/db-core/benches/: insert.rs
crates/db-core/src/: column_def.rs  column_segment.rs  database.rs  db.rs  dtype.rs  error.rs  format_table.rs  lib.rs  main.rs  stringt.rs  table.rs  table_format.rs  table_meta.rs  table_partition.rs  table_schema.rs  table_stats.rs  zone_map.rs
crates/db-execution/: Cargo.toml
crates/db-execution/benches/: query.rs
crates/db-execution/src/: execute.rs  lib.rs  output.rs  physical_plan.rs  query_result.rs
crates/db-mvcc/: Cargo.toml
crates/db-optimizer/: Cargo.toml
crates/db-optimizer/src/: build_plan.rs  lib.rs  logical_plan.rs  optimize.rs  planner.rs
crates/db-scheduler/: Cargo.toml
crates/db-server/: Cargo.toml
crates/db-server/src/: lib.rs
crates/db-sql/: Cargo.toml
crates/db-sql/src/: bind.rs  lib.rs  translate.rs
crates/db-storage/: Cargo.toml
crates/db-storage/src/: lib.rs  row_group.rs  segment.rs  table_paritition.rs  table_partition.rs  varlen.rs  zone_map.rs
crates/db-types/: Cargo.toml
crates/db-types/src/: column_definition.rs  data_type.rs  lib.rs  output_table.rs  plan.rs  query_result.rs  table_schema.rs
crates/db-types/src/plan/: logical_plan.rs  resolved_plan.rs
crates/db-wal/: Cargo.toml
crates/lsdb-catalog/: Cargo.toml
crates/lsdb-catalog/benches/: insert.rs
crates/lsdb-catalog/src/: database.rs  lib.rs  statistics.rs  table.rs
crates/lsdb-cli/: Cargo.toml
crates/lsdb-cli/src/: main.rs
crates/lsdb-execution/: Cargo.toml
crates/lsdb-execution/benches/: query.rs
crates/lsdb-execution/src/: execute.rs  physical_plan.rs
crates/lsdb-mvcc/: Cargo.toml
crates/lsdb-optimizer/: Cargo.toml
crates/lsdb-optimizer/src/: build_plan.rs  optimize.rs
crates/lsdb-scheduler/: Cargo.toml
crates/lsdb-server/: Cargo.toml
crates/lsdb-sql/: Cargo.toml
crates/lsdb-sql/src/: bind.rs  parse.rs  translate.rs
crates/lsdb-storage/: Cargo.toml
crates/lsdb-storage/src/: column_segment.rs  column_statistics.rs  lib.rs  segment.rs  table_partition.rs  zone_map.rs
crates/lsdb-types/: Cargo.toml
crates/lsdb-types/src/: lib.rs  output_table.rs  plan.rs  query_result.rs
crates/lsdb-types/src/exec/: data_chunk.rs  execution_vector.rs  flat_vector.rs  mod.rs
crates/lsdb-types/src/plan/: logical_plan.rs  physical_plan.rs  resolved_plan.rs  unresolved_plan.rs
crates/lsdb-wal/: Cargo.toml
src/: database.rs  dtype.rs  error.rs  format_table.rs  lib.rs  main.rs  table.rs
