[workspace]
members = [
    "crates/db-core",
    "crates/db-server",
    "crates/db-sql"
]

default-members  = ["crates/db-core"]
resolver         = "2"

[workspace.dependencies]
# db-core
cardinality-estimator = "1" # HyperLogLog
fastbloom = "0.17.0"        # Bloom Filter

# db-server
tokio     = { version = "1.50.0", features = ["full"] }
socket2   = "0.6"

# db-sql
sqlparser = "0.61.0"

# util
bytemuck  = { version = "1.25", features = ["derive"] }
rapidhash = "4.4.1"
criterion = { version = "0.5", features = ["html_reports"] }

