[workspace]
members = [
    "crates/db-catalog",
    "crates/db-cli",
    "crates/db-execution",
    "crates/db-mvcc",
    "crates/db-optimizer",
    "crates/db-scheduler",
    "crates/db-server",
    "crates/db-sql",
    "crates/db-storage",
    "crates/db-types",
    "crates/db-wal",
]

default-members  = ["crates/db-cli"]
resolver         = "2"

[workspace.dependencies]
# db-storage
cardinality-estimator = "1"
fastbloom = "0.17.0"

# db-server
tokio     = { version = "1.50.0", features = ["full"] }
socket2   = "0.6"

# db-sql
sqlparser = "0.61.0"

# util
bytemuck  = { version = "1.25", features = ["derive"] }
rapidhash = "4.4.1"
criterion = { version = "0.5", features = ["html_reports"] }
