[workspace]
resolver = "3"
members = ["crates/*"]
default-members = ["crates/lsdb-cli"]

[workspace.dependencies]
# lsdb-storage
cardinality-estimator = "1"
fastbloom = "0.17.0"

# lsdb-server
socket2 = "0.6"
tokio = { version = "1.50.0", features = ["full"] }

# lsdb-sql
sqlparser = "0.61.0"

# util
zerocopy = { version = "0.8", features = ["derive"] }
criterion = { version = "0.5", features = ["html_reports"] }
rapidhash = "4.4.1"
