[package]
name       = "db-core"
version    = "0.1.0"
edition    = "2024"
license    = "MIT"
repository = "https://github.com/wyattgill9/db"
authors    = ["Wyatt Gill <wyattgill01@outlook.com>"]

[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
snafu    = { workspace = true }
bytemuck = { workspace = true }
ahash    = { workspace = true }
dashmap  = { workspace = true }
