[package]
name       = "db-core"
version    = "0.1.0"
edition    = "2024"
license    = "MIT"
repository = "https://github.com/wyattgill9/db"
authors    = ["Wyatt Gill <wyattgill01@outlook.com>"]

[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
bytemuck     = { workspace = true }
rapidhash    = { workspace = true }

db_sqlparser = { package = "db-sql", path = "../db-sql" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name    = "insert"
harness = false
