[package]
name       = "db-storage"
version    = "0.1.0"
edition    = "2024"
license    = "MIT"
repository = "https://github.com/wyattgill9/db"
authors    = ["Wyatt Gill <wyattgill01@outlook.com>"]

[dependencies]
db-types              = { path = "../db-types" }
bytemuck              = { workspace = true }
rapidhash             = { workspace = true }
fastbloom             = { workspace = true }
cardinality-estimator = { workspace = true }
