[package]
name = "lsdb-cli"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/wyattgill9/db"
authors = ["Wyatt Gill <wyattgill01@outlook.com>"]

[[bin]]
name = "db"
path = "src/main.rs"

[dependencies]
bytemuck = { workspace = true }
lsdb-catalog = { path = "../lsdb-catalog" }
lsdb-execution = { path = "../lsdb-execution" }
lsdb-optimizer = { path = "../lsdb-optimizer" }
lsdb-sql = { path = "../lsdb-sql" }
lsdb-storage = { path = "../lsdb-storage" }
lsdb-types = { path = "../lsdb-types" }
