[package]
name = "lsdb-execution"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/wyattgill9/db"
authors = ["Wyatt Gill <wyattgill01@outlook.com>"]

[[bench]]
harness = false
name = "query"

[dependencies]
lsdb-catalog = { path = "../lsdb-catalog" }
lsdb-storage = { path = "../lsdb-storage" }
lsdb-types = { path = "../lsdb-types" }

[dev-dependencies]
criterion = { workspace = true }
zerocopy = { workspace = true }
