[package]
name = "lsdb-sql"
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/wyattgill9/db"
authors = ["Wyatt Gill <wyattgill01@outlook.com>"]

[dependencies]
lsdb-catalog = { path = "../lsdb-catalog" }
lsdb-types = { path = "../lsdb-types" }
sqlparser = { workspace = true }
